# DAFEC

./: CMakeCache.txt  CMakeLists.txt  LQ_N.py  cmake_install.cmake  gmon.out  main.f90  out  prof.txt  vtk_out.vtk
Results/: .~lock.Results.ods#  Results.ods
inputs/: hetero.txt  homo.txt
inputs/Benchmarks/: 3_Region_Sphere.txt  Ackroyd.txt  LWR.txt  Supercell.txt  Takeda.txt  c5g2.txt  c5g7.txt  c5g7_2.txt  c5g7_3.txt  cylinder.txt  reed.txt  sood.txt  sood_2.txt  sood_3.txt
src/: C_timer.f90  m_Constants_Mod.f90  m_Determine_Solve_Method.f90  m_Gauss_Points.f90  m_VTK_Reader.f90
src/Diffusion/: m_Boundary_Conditions_D.f90  m_Construct_Matrix_D.f90  m_Create_Hexahedral_Shape_Functions_D.f90  m_Create_Prismatic_Shape_Functions_D.f90  m_Create_Pyramidal_Shape_Functions_D.f90  m_Create_Quadrilateral_Shape_Functions_D.f90  m_Create_Shape_Functions_D.f90  m_Create_Tetrahedral_Shape_Functions_D.f90  m_Create_Triangular_Shape_Functions_D.f90  m_Normalisation_D.f90  m_Output_D.f90  m_PETSc.F90  m_Read_Properties_D.f90  m_Results_D.f90  m_Solver_D.f90  m_VTK_Writer_D.f90
src/Transport/: m_Boundary_Conditions.f90  m_Calculate_Curvilinear_Normals.f90  m_Calculate_mu_w.f90  m_Construct_Matrix_1D.f90  m_Construct_Matrix_2D.f90  m_Construct_Matrix_3D.f90  m_Create_Hexahedral_Shape_Functions.f90  m_Create_Prismatic_Shape_Functions.f90  m_Create_Pyramidal_Shape_Functions.f90  m_Create_Quadrilateral_Shape_Functions.f90  m_Create_Shape_Functions.f90  m_Create_Tetrahedral_Shape_Functions.f90  m_Create_Triangular_Shape_Functions.f90  m_Cylindrical.f90  m_Normalisation.f90  m_Output.f90  m_RZ.f90  m_Read_Properties.f90  m_Results.f90  m_Small_Matrix_Solver.f90  m_Solver.f90  m_Spherical.f90  m_Sweep_Order_1D.f90  m_Sweep_Order_2D.f90  m_Sweep_Order_3D.f90  m_VTK_Writer.f90
vtk/1D/: 3_Region_Sphere.vtk  O10_line.vtk  O1_line.vtk  O1_line_2.vtk  O1_line_3.vtk  O2_line.vtk  O2_line_2.vtk  O5_line.vtk  O6_line.vtk  O8_line.vtk  O9_line.vtk  reed.vtk  reed_2.vtk
vtk/2D/: Ackroyd.vtk  Ackroyd_2.vtk  Ackroyd_3.vtk  C5G2_1.vtk  C5G2_2.vtk  C5G7.vtk  C5G7_2.vtk  C5G7vol_1_1_f.vtk  C5G7vol_1_2_f.vtk  C5G7vol_2_1_f.vtk  C5G7vol_2_2_f.vtk  Curvilinear.vtk  Cylinder_2.vtk  LWR.vtk  O1_quad.vtk  O1_quad_1.vtk  O1_quad_2.vtk  O1_quad_multi.vtk  O1_quad_multi_2.vtk  O1_tri.vtk  O1_tri_2.vtk  O1_tri_multi.vtk  O2_Quads.vtk  O2_quad.vtk  O2_tri.vtk  O3_Quads.vtk  O3_quad.vtk  O3_tri.vtk  O3_tri_2.vtk  O4_quad.vtk  O4_quad_2.vtk  O5_quad_2.vtk  O8_quad.vtk  Quads.vtk  Sqaures.vtk  Sqaures2.vtk  Squares.vtk  Squares_100.vtk  Squares_2.vtk  Squares_3.vtk  (+22 more)
vtk/3D/: Cube.vtk  Cube_2.vtk  O1_cube.vtk  O1_cube_2.vtk  O1_tet.vtk  O1_tet_2.vtk  O1_tet_3.vtk  O1_tet_4.vtk  O1_tet_5.vtk  O1_tet_6.vtk  O2_Pris.vtk  O2_Pyr.vtk  O2_Takeda.vtk  O2_hex_2.vtk  O2_hex_3.vtk  O2_hex_4.vtk  O2_tet.vtk  O2_tet_2.vtk  O2_tet_3.vtk  O2_tet_5.vtk  O2_tet_6.vtk  O3_Cube_VTK.vtk  O3_Cube_VTK_2.vtk  O3_cube.vtk  O3_cube_2.vtk  O3_cube_3.vtk  O3_cube_4.vtk  Pris.vtk  Pris_2.vtk  Pyr.vtk  Pyr_2.vtk  Pyr_3.vtk  Takeda_2.vtk  Tet.vtk  pyramid.vtk  pyramid_2.vtk  pyramid_3.vtk
